0026153: Draw Harness, ViewerTest - "verase" does not remove selection highlight for shaded object